# Impose

./: .gitignore  CHANGELOG.md  LICENSE  README.md  impose.cabal
example/: index
exe/: Main.hs
src/: Impose.hs
test/: Spec.hs
