cabal-version:      3.0
name:               impose
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             rl-king
maintainer:         hello@rubenlieking.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall
    default-language: GHC2021

executable impose
    import:           warnings
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
                      , impose-lib
    hs-source-dirs:   exe
    default-language: GHC2021

library impose-lib
    exposed-modules:
      Impose
    default-language: GHC2021
    hs-source-dirs:
      src
    build-depends:    base ^>=4.18.2.1
                      , directory
                      , filepath
                      , Glob
                      , optparse-applicative
                      , process
                      , text
                      , time

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
        test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
      base ^>=4.18.2.1
      , hspec
      , hspec-contrib
      , QuickCheck
      , HUnit
      , impose-lib
    default-language: GHC2021
