cabal-version:      3.0
name:               impose
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             rl-king
maintainer:         hello@rubenlieking.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common defaults
    ghc-options: -Wall
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable impose
    import:           defaults
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
                      , impose-lib
    hs-source-dirs:   exe

library impose-lib
    import:           defaults
    exposed-modules:
      Impose
    hs-source-dirs:
      src
    build-depends:    base ^>=4.18.2.1
                      , directory
                      , filepath
                      , Glob
                      , optparse-applicative
                      , process
                      , text
                      , time
                      , containers
                      , split
                      , fast-logger

test-suite spec
    import:           defaults
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
        test
    build-depends:    base ^>=4.18.2.1
                      , hspec
                      , hspec-contrib
                      , QuickCheck
                      , HUnit
                      , impose-lib
                      , containers
